kubernetes/ansible-ui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore
  namespace: semaphore
  labels:
    app: semaphore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: semaphore
  template:
    metadata:
      labels:
        app: semaphore
    spec:
      containers:
        - name: semaphore
          image: semaphoreui/semaphore:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: semaphore-service
  namespace: semaphore
  labels:
    app: semaphore
spec:
  selector:
    app: semaphore
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
